스프린트미션_완료/07_4팀_김명환 이미지 업데이트

--- a/스프린트미션_완료/07_4팀_김명환.ipynb
+++ b/스프린트미션_완료/07_4팀_김명환.ipynb
@@ -71,7 +71,7 @@
     "- **평가 지표**: mAP (Mean Average Precision), IoU (Intersection over Union)\n",
     "\n",
     "\n",
-    "<img src=\"https://c0z0c.github.io/sprint_mission/%EC%8A%A4%ED%94%84%EB%A6%B0%ED%8A%B8%EB%AF%B8%EC%85%98_%EC%99%84%EB%A3%8C/image/07_4%ED%8C%80_%EA%B9%80%EB%AA%85%ED%99%98/1_2_mermaid_%EC%A3%BC%EC%9A%94%EA%B3%BC%EC%A0%9C.png\"/>\n",
+    "<img src=\"https://c0z0c.github.io/sprint_mission/%EC%8A%A4%ED%94%84%EB%A6%B0%ED%8A%B8%EB%AF%B8%EC%85%98_%EC%99%84%EB%A3%8C/image/07_4%ED%8C%80_%EA%B9%80%EB%AA%85%ED%99%98/1_2_mermaid_%EC%A3%BC%EC%9A%94%EA%B3%BC%EC%A0%9C.png\" width=\"640px\"/>\n",
     "\n",
     "--\n",
     "\n",
@@ -144,7 +144,7 @@
     "\n",
     "$$\\text{Feature Map Size} = \\frac{\\text{Input Size}}{\\text{Stride}}$$\n",
     "\n",
-    "<img src=\"https://c0z0c.github.io/sprint_mission/%EC%8A%A4%ED%94%84%EB%A6%B0%ED%8A%B8%EB%AF%B8%EC%85%98_%EC%99%84%EB%A3%8C/image/07_4%ED%8C%80_%EA%B9%80%EB%AA%85%ED%99%98/2_2_mermaid_Multi-Scale_Feature_Maps.png\"/>\n",
+    "<img src=\"https://c0z0c.github.io/sprint_mission/%EC%8A%A4%ED%94%84%EB%A6%B0%ED%8A%B8%EB%AF%B8%EC%85%98_%EC%99%84%EB%A3%8C/image/07_4%ED%8C%80_%EA%B9%80%EB%AA%85%ED%99%98/2_2_mermaid_Multi-Scale_Feature_Maps.png\" width=\"640px\"/>\n",
     "\n",
     "### 2.3. Default Box Generation\n",
     "\n",
@@ -219,9 +219,9 @@
     "\n",
     "### 3.3. 아키텍처 비교 분석\n",
     "\n",
-    "<img src=\"https://c0z0c.github.io/sprint_mission/%EC%8A%A4%ED%94%84%EB%A6%B0%ED%8A%B8%EB%AF%B8%EC%85%98_%EC%99%84%EB%A3%8C/image/07_4%ED%8C%80_%EA%B9%80%EB%AA%85%ED%99%98/3_3_%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98_%EB%B9%84%EA%B5%90_%EB%B6%84%EC%84%9D1.png\"/>\n",
+    "<img src=\"https://c0z0c.github.io/sprint_mission/%EC%8A%A4%ED%94%84%EB%A6%B0%ED%8A%B8%EB%AF%B8%EC%85%98_%EC%99%84%EB%A3%8C/image/07_4%ED%8C%80_%EA%B9%80%EB%AA%85%ED%99%98/3_3_%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98_%EB%B9%84%EA%B5%90_%EB%B6%84%EC%84%9D1.png\" width=\"640px\"/>\n",
     "\n",
-    "<img src=\"https://c0z0c.github.io/sprint_mission/%EC%8A%A4%ED%94%84%EB%A6%B0%ED%8A%B8%EB%AF%B8%EC%85%98_%EC%99%84%EB%A3%8C/image/07_4%ED%8C%80_%EA%B9%80%EB%AA%85%ED%99%98/3_3_%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98_%EB%B9%84%EA%B5%90_%EB%B6%84%EC%84%9D2.png\"/>\n",
+    "<img src=\"https://c0z0c.github.io/sprint_mission/%EC%8A%A4%ED%94%84%EB%A6%B0%ED%8A%B8%EB%AF%B8%EC%85%98_%EC%99%84%EB%A3%8C/image/07_4%ED%8C%80_%EA%B9%80%EB%AA%85%ED%99%98/3_3_%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98_%EB%B9%84%EA%B5%90_%EB%B6%84%EC%84%9D2.png\" width=\"640px\"/>\n",
     "\n",
     "**주요 차이점:**\n",
     "\n",
