위클리_페이퍼_9_AI4기_김명환.md 제목수정

--- a/위클리페이퍼/위클리_페이퍼_9_AI4기_김명환.md
+++ b/위클리페이퍼/위클리_페이퍼_9_AI4기_김명환.md
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: "위클리페이퍼8 4팀_김명환 - YOLO 모델과 mAP 성능 평가"
-description: "YOLO 모델과 mAP 성능 평가"
-date: 2025-09-01
+title: "위클리페이퍼8 4팀_김명환 - Semantic Segmentation"
+description: "Semantic Segmentation"
+date: 2025-09-05
 cache-control: no-cache
 expires: 0
 pragma: no-cache
