위클리_페이퍼_9_AI4기_김명환.md 오타 수정

--- a/위클리페이퍼/위클리_페이퍼_9_AI4기_김명환.md
+++ b/위클리페이퍼/위클리_페이퍼_9_AI4기_김명환.md
@@ -192,13 +192,18 @@ $y_{i,j} = W * x_{i,j} + b$
 ```mermaid
 graph TB
     subgraph "기존 CNN의 한계"
+        direction LR
         A1["고해상도 입력<br/>512×512×3"] --> B1["여러 층 통과"]
         B1 --> C1["완전연결층<br/>벡터로 평면화"]
         C1 --> D1["위치 정보 완전 손실"]
         D1 --> E1["생성 불가능"]
     end
-    
+```
+
+```mermaid
+graph TB
     subgraph "FCN의 혁신"  
+        direction LR
         A2["임의 크기 입력<br/>H×W×3"] --> B2["합성곱층만 사용"]
         B2 --> C2["1×1 합성곱<br/>공간 구조 유지"]
         C2 --> D2["픽셀별 예측 가능"]
@@ -386,11 +391,11 @@ $D(x) = P(\text{이미지 x가 진짜일 확률})$
 graph LR
     A["1라운드"] --> B["생성자: 어설픈 가짜"]
     B --> C["판별자: 쉽게 구분"]
-    C --> D["2라운드"] 
-    D --> E["생성자:# 딥러닝 핵심 개념 가이드
-*Deep Learning Core Concepts Guide*
-
----
+    C --> D["2라운드"]
+    D --> E["생성자: 더 정교한 가짜"]
+    E --> F["판별자: 더 어려운 판별"]
+    F --> G["반복 학습"]
+```
 
 ## 목차
 
