--- a/스터디/자연어처리_딥러닝_한글.md
+++ b/스터디/자연어처리_딥러닝_한글.md
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "텍스트데이터와임베딩"
-description: "텍스트데이터와임베딩"
+title: "한글 자연어 처리 검토"
+description: "한글 자연어 처리 검토"
 date: 2025-09-26
 cache-control: no-cache
 expires: 0
