자연어처리 수정

--- a/스터디/자연어처리_딥러닝_한글.md
+++ b/스터디/자연어처리_딥러닝_한글.md
@@ -56,7 +56,7 @@ author: "김명환"
 
 한글의 특징은 다음과 같다:
 - 19개 초성, 21개 중성, 28개 종성의 조합
-- 이론적으로 $$19 \times 21 \times 28 = 11,172$$개의 음절 가능
+- 이론적으로 $19 \times 21 \times 28 = 11,172$개의 음절 가능
 - 표음성(phonetic representation [포네틱 리프리젠테이션])이 높아 발음과 표기가 일치
 
 ### 1.2. 문법 구조
@@ -259,7 +259,7 @@ $$d_{ij} = \sqrt{(x_i - x_j)^2 + (y_i - y_j)^2}$$
 
 $$P(i \to j) = \frac{\exp(-\alpha \cdot d_{ij})}{\sum_k \exp(-\alpha \cdot d_{ik})}$$
 
-여기서 $$\alpha$$는 거리 민감도 파라미터이다.
+여기서 $\alpha$는 거리 민감도 파라미터이다.
 
 **주요 오타 패턴:**
 - 'ㅓ' ↔ 'ㅕ': 세로 인접
