자연어처리_딥러닝_한글특이사항.md

--- a/스터디/자연어처리_딥러닝_한글특이사항.md
+++ b/스터디/자연어처리_딥러닝_한글특이사항.md
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "딥러닝 자연어처리 한글 특이사항 가이드"
-description: "딥러닝 자연어처리 한글 특이사항 가이드"
+title: "딥러닝 자연어처리 한글 특이사항"
+description: "딥러닝 자연어처리 한글 특이사항"
 date: 2025-09-28
 cache-control: no-cache
 expires: 0
@@ -9,7 +9,7 @@ pragma: no-cache
 author: "김명환"
 ---
 
-# 딥러닝 자연어처리 한글 특이사항 가이드
+# 딥러닝 자연어처리 한글 특이사항
 
 ## 목차
 1. [개요](#1-개요)<br/>
