비교 그래프 추가

--- a/스프린트미션_완료/10_3팀_김명환.ipynb
+++ b/스프린트미션_완료/10_3팀_김명환.ipynb
@@ -385,6 +385,7 @@
     "| **GRU** | **word2vec** | **100** | **0.7191** | **0.7166** | **0.7036** | 4 |\n",
     "| LSTM | word2vec | 100 | 0.6834 | 0.6817 | 0.6681 | 6 |\n",
     "\n",
+    "<img src=\"https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/10/251008/val_acc.png\" width=\"640px\"/>\n",
     "\n",
     "- 성능 향상률\n",
     "\n",
