데이타셋 일상생활 및 구어체

--- a/스터디/데이터셋_일상생활_및_구체어.md
+++ b/스터디/데이터셋_일상생활_및_구체어.md
@@ -53,7 +53,8 @@ author: "김명환"
 
 ### 1.1. 목적 및 활용 범위
 
-본 데이터셋은 **일상생활 및 구어체** 표현에 특화된 한국어-영어 신경망 기계번역(Neural Machine Translation, NMT) 모델 학습을 위해 구축되었다. 일반적인 문어체 번역 시스템과 달리, 실제 대화에서 자주 사용되는 구어적 표현, 감탄사, 생략 표현 등을 포괄하여 보다 자연스러운 일상 대화 번역을 목표로 한다.
+본 데이터셋은 **일상생활 및 구어체** 표현에 특화된 한국어-영어 신경망 기계번역(Neural Machine Translation, NMT) 모델 학습을 위해 구축되었다.<br/>
+일반적인 문어체 번역 시스템과 달리, 실제 대화에서 자주 사용되는 구어적 표현, 감탄사, 생략 표현 등을 포괄하여 보다 자연스러운 일상 대화 번역을 목표로 한다.
 
 **주요 활용 시나리오(scenario)**
 - 실시간 대화 번역 시스템
