미션 제목 업데이트

--- a/스프린트미션_완료/07_4팀_김명환.md
+++ b/스프린트미션_완료/07_4팀_김명환.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "스프린트미션6 4팀_김명환 - SSD를 활용한 Pet Face Detection 미션 보고서"
+title: "SSD를 활용한 Pet Face Detection 미션 보고서"
 description: "SSD를 활용한 Pet Face Detection 미션 보고서"
 cache-control: no-cache
 date: 2025-08-23
