--- a/스프린트미션_완료/08_4팀_김명환.md
+++ b/스프린트미션_완료/08_4팀_김명환.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "스프린트미션8 4팀_김명환 - 축구 경기 영상 시맨틱 세그멘테이션(Semantic Segmentation) 기술 보고서"
+title: "축구 경기 영상 시맨틱 세그멘테이션(Semantic Segmentation) 기술 보고서"
 description: "축구 경기 영상 시맨틱 세그멘테이션(Semantic Segmentation) 기술 보고서"
 cache-control: no-cache
 date: 2025-09-02
