--- a/스프린트미션_완료/09_4팀_김명환.md
+++ b/스프린트미션_완료/09_4팀_김명환.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "스프린트미션9 4팀_김명환 - Conditional GAN을 활용한 FashionMNIST 이미지 생성 프로젝트 보고서"
+title: "Conditional GAN을 활용한 FashionMNIST 이미지 생성 프로젝트 보고서"
 description: "Conditional GAN을 활용한 FashionMNIST 이미지 생성 프로젝트 보고서"
 cache-control: no-cache
 date: 2025-09-04
