--- a/스프린트미션_완료/10_3팀_김명환.md
+++ b/스프린트미션_완료/10_3팀_김명환.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "스프린트미션10 3팀_김명환 - News Group 20 텍스트 분류 연구 - RNN 기반 모델과 임베딩 기법 비교"
+title: "News Group 20 텍스트 분류 연구 - RNN 기반 모델과 임베딩 기법 비교"
 description: "17,322개 뉴스 문서를 20개 카테고리로 분류하는 딥러닝 프로젝트 - GRU 최고 72.39% 정확도 달성"
 author: "김명환"
 cache-control: no-cache
