--- a/스프린트미션_완료/미션5_4팀_김명환.md
+++ b/스프린트미션_완료/미션5_4팀_김명환.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "스프린트미션5 4팀_김명환 - 문서 노이즈 제거 딥러닝 모델 개발 보고서"
+title: "문서 노이즈 제거 딥러닝 모델 개발 보고서"
 description: "문서 이미지에서 노이즈를 제거하는 딥러닝 모델 비교 연구"
 date: 2025-08-15
 cache-control: no-cache
@@ -11,13 +11,13 @@ pragma: no-cache
 # 스프린트미션5 4팀_김명환 - 문서 노이즈 제거 딥러닝 모델 개발 보고서
 
 ## 📋 목차
-1. [프로젝트 개요](#1-프로젝트-개요)
-2. [데이터셋 분석](#2-데이터셋-분석)
-3. [데이터 전처리 및 증강](#3-데이터-전처리-및-증강)
-4. [모델 아키텍처](#4-모델-아키텍처)
-5. [손실 함수 설계](#5-손실-함수-설계)
-6. [실험 설계 및 결과](#6-실험-설계-및-결과)
-7. [결론 및 향후 과제](#7-결론-및-향후-과제)
+1. [프로젝트 개요](#1-프로젝트-개요)<br/>
+2. [데이터셋 분석](#2-데이터셋-분석)<br/>
+3. [데이터 전처리 및 증강](#3-데이터-전처리-및-증강)<br/>
+4. [모델 아키텍처](#4-모델-아키텍처)<br/>
+5. [손실 함수 설계](#5-손실-함수-설계)<br/>
+6. [실험 설계 및 결과](#6-실험-설계-및-결과)<br/>
+7. [결론 및 향후 과제](#7-결론-및-향후-과제)<br/>
 
 ---
 
